#Build Graphical Tools?
SET(BUILD_GRAPHICAL_TOOLS OFF CACHE BOOL "Build Graphical Tools (scope and playback)?")
IF(BUILD_GRAPHICAL_TOOLS)
    ADD_SUBDIRECTORY(Graphical)
ENDIF(BUILD_GRAPHICAL_TOOLS)


#Build Console Tools
SET(BUILD_CONSOLE_TOOLS ON CACHE BOOL "Build Console Tools?")
IF(BUILD_CONSOLE_TOOLS)
    ADD_SUBDIRECTORY(Console)
ENDIF(BUILD_CONSOLE_TOOLS)

